--- a/source-code/frontend/src/shared/styles/default/root.scss
+++ b/source-code/frontend/src/shared/styles/default/root.scss
@@ -84,7 +84,7 @@
 
 	// scrollbar
 
-	--color-scrollbar-thumb: var(--color-gray-medium);
+	--color-scrollbar-thumb: var(--color-gray-dark);
 
 	// shadow
 	--box-shadow: 0px 0px 20px 0px #21212138;
