#change - use convert to rem function

--- a/source-code/frontend/src/shared/styles/common.scss
+++ b/source-code/frontend/src/shared/styles/common.scss
@@ -1,5 +1,7 @@
-@import "./functions/convert-px2rem";
-@import "./mixins/typography";
+@use "@/styles/functions/_convert";
+@import "@/styles/mixins/typography";
+@import "@/styles/mixins/breakpoints";
+@import "@/styles/mixins/mixins";
 
 html {
 	scroll-padding-top: calc(var(--header-height-number) * 1px);
