--- a/source-code/frontend/src/shared/ui/buttons/close/ui/CloseButton.module.scss
+++ b/source-code/frontend/src/shared/ui/buttons/close/ui/CloseButton.module.scss
@@ -1,11 +1,9 @@
-@import "@/styles/functions/convert-px2rem";
-@import "@/styles/mixins/typography";
-@import "@/styles/mixins/breakpoints";
+@use "@/styles/functions/_convert";
 @import "@/styles/mixins/mixins";
 
 .button {
-	width: convert-px2rem(24);
-	height: convert-px2rem(24);
+	width: convert.to-rem(24);
+	height: convert.to-rem(24);
 	flex-shrink: 0;
 	@include flex-center();
 
