--- a/source-code/frontend/src/widgets/header/ui/logo/HeaderLogo.module.scss
+++ b/source-code/frontend/src/widgets/header/ui/logo/HeaderLogo.module.scss
@@ -1,17 +1,10 @@
-@import "@/styles/functions/convert-px2rem";
-@import "@/styles/mixins/typography";
-@import "@/styles/mixins/breakpoints";
-@import "@/styles/mixins/mixins";
-
+@use "@/styles/functions/_convert";
 .block {
 	flex-shrink: 0;
-
-	@include lg {
-	}
 }
 
 .wrap {
 	font-weight: 600;
-	font-size: convert-px2rem(30);
+	font-size: convert.to-rem(30);
 	text-decoration: none;
 }
