--- a/source-code/frontend/src/features/modal/ui/default/DefaultModal.module.scss
+++ b/source-code/frontend/src/features/modal/ui/default/DefaultModal.module.scss
@@ -1,19 +1,11 @@
-@import "@/styles/functions/convert-px2rem";
-@import "@/styles/mixins/typography";
-@import "@/styles/mixins/breakpoints";
-@import "@/styles/mixins/mixins";
+@use "@/styles/functions/_convert";
 
 .block {
 	text-align: center;
-	@include md {
-	}
-
-	@include lg {
-	}
 }
 
 .type {
 	width: fit-content;
 	display: flex;
-	margin: 0 auto convert-px2rem(20);
+	margin: 0 auto convert.to-rem(20);
 }
