--- a/source-code/frontend/src/shared/layouts/content-layout/ui/ContentLayout.module.scss
+++ b/source-code/frontend/src/shared/layouts/content-layout/ui/ContentLayout.module.scss
@@ -1,18 +1,13 @@
-@import "@/styles/functions/convert-px2rem";
-@import "@/styles/mixins/typography";
+@use "@/styles/functions/_convert";
 @import "@/styles/mixins/breakpoints";
-@import "@/styles/mixins/mixins";
 
 .block {
-	max-width: convert-px2rem(1440);
-	padding: 0 convert-px2rem(10);
+	max-width: convert.to-rem(1440);
+	padding: 0 convert.to-rem(10);
 	width: 100%;
 	margin: 0 auto;
 	position: relative;
-	@include md {
-	}
-
 	@include lg {
-		padding: 0 convert-px2rem(30);
+		padding: 0 convert.to-rem(30);
 	}
 }
