--- a/source-code/frontend/src/shared/layouts/page/ui/PageLayout.module.scss
+++ b/source-code/frontend/src/shared/layouts/page/ui/PageLayout.module.scss
@@ -1,7 +1,4 @@
-@import "@/styles/functions/convert-px2rem";
-@import "@/styles/mixins/typography";
-@import "@/styles/mixins/breakpoints";
-@import "@/styles/mixins/mixins";
+@use "@/styles/functions/_convert";
 
 .block {
 	margin: 0 auto;
@@ -11,12 +8,6 @@
 	width: 100%;
 
 	&.fixedHeader {
-		padding-top: convert-px2rem(var(--header-height-number));
-	}
-
-	@include md {
-	}
-
-	@include lg {
+		padding-top: convert.to-rem(var(--header-height-number));
 	}
 }
