--- a/source-code/frontend/src/shared/styles/mixins/typography.scss
+++ b/source-code/frontend/src/shared/styles/mixins/typography.scss
@@ -1,70 +1,70 @@
-@import "../functions/convert-px2rem";
+@use "../functions/_convert";
 @import "../mixins/mixins.scss";
 @import "../mixins/breakpoints.scss";
 
 @mixin h1() {
 	font-weight: 400;
-	font-size: convert-px2rem(32);
+	font-size: convert.to-rem(32);
 	line-height: 1.2;
 
 	@include lg {
-		font-size: convert-px2rem(42);
+		font-size: convert.to-rem(42);
 	}
 }
 
 @mixin h2() {
 	font-weight: 400;
-	font-size: convert-px2rem(28);
+	font-size: convert.to-rem(28);
 	line-height: 1.2;
 
 	@include lg {
-		font-size: convert-px2rem(36);
+		font-size: convert.to-rem(36);
 	}
 }
 
 @mixin h3() {
 	font-weight: 400;
-	font-size: convert-px2rem(22);
+	font-size: convert.to-rem(22);
 	line-height: 1.2;
 
 	@include lg {
-		font-size: convert-px2rem(28);
+		font-size: convert.to-rem(28);
 	}
 }
 
 @mixin h4() {
 	font-weight: 600;
-	font-size: convert-px2rem(20);
+	font-size: convert.to-rem(20);
 	line-height: 1.2;
 }
 
 @mixin main-text() {
 	font-weight: 400;
-	font-size: convert-px2rem(16);
+	font-size: convert.to-rem(16);
 	line-height: 1.2;
 }
 
 @mixin additional-text() {
 	font-weight: 400;
-	font-size: convert-px2rem(14);
+	font-size: convert.to-rem(14);
 	line-height: 1.2;
 }
 
 @mixin small-text() {
 	font-weight: 400;
-	font-size: convert-px2rem(12);
+	font-size: convert.to-rem(12);
 	line-height: 1.2;
 }
 
 @mixin helper-text() {
 	font-weight: 400;
-	font-size: convert-px2rem(10);
+	font-size: convert.to-rem(10);
 	line-height: 1.2;
 }
 
 @mixin link-1() {
 	font-weight: 400;
-	text-underline-offset: convert-px2rem(2);
+	text-underline-offset: convert.to-rem(2);
 	width: fit-content;
 	text-decoration: underline;
 	transition: color var(--transition-duration);
@@ -84,7 +84,7 @@
 
 @mixin link-2() {
 	font-weight: 400;
-	text-underline-offset: convert-px2rem(2);
+	text-underline-offset: convert.to-rem(2);
 	width: fit-content;
 	text-decoration: underline;
 	transition: color var(--transition-duration);
