--- a/source-code/frontend/src/shared/ui/fields/input-controls/ui/InputControls.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/input-controls/ui/InputControls.module.scss
@@ -1,22 +1,19 @@
-@import "@/styles/functions/convert-px2rem";
-@import "@/styles/mixins/typography";
-@import "@/styles/mixins/breakpoints";
+@use "@/styles/functions/_convert";
 @import "@/styles/mixins/mixins";
 
 .buttons {
 	position: absolute;
-	right: convert-px2rem(10);
+	right: convert.to-rem(10);
 	top: 0;
-	// height: convert-px2rem(var(--input-height-number));
 	height: 100%;
-	max-height: convert-px2rem(var(--input-height-number));
+	max-height: convert.to-rem(var(--input-height-number));
 	@include flex-center;
 	flex-direction: row;
 }
 
 .reset {
-	width: convert-px2rem(24) !important;
-	height: convert-px2rem(24) !important;
+	width: convert.to-rem(24) !important;
+	height: convert.to-rem(24) !important;
 
 	svg {
 		width: 18px !important;
@@ -24,8 +21,8 @@
 }
 
 .calendar {
-	width: convert-px2rem(24) !important;
-	height: convert-px2rem(24) !important;
+	width: convert.to-rem(24) !important;
+	height: convert.to-rem(24) !important;
 	@include flex-center;
 	@include hover-opacity;
 
