--- a/source-code/frontend/src/shared/ui/fields/input/ui/Input.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/input/ui/Input.module.scss
@@ -1,15 +1,4 @@
-@import "@/styles/functions/convert-px2rem";
-@import "@/styles/mixins/typography";
-@import "@/styles/mixins/breakpoints";
-@import "@/styles/mixins/mixins";
-
-.block {
-	@include md {
-	}
-
-	@include lg {
-	}
-}
+@use "@/styles/functions/_convert";
 
 .wrap {
 	display: block;
@@ -19,14 +8,14 @@
 .input {
 	display: block;
 	width: 100%;
-	min-height: convert-px2rem(var(--input-height-number));
+	min-height: convert.to-rem(var(--input-height-number));
 
-	font-size: convert-px2rem(16);
+	font-size: convert.to-rem(16);
 
 	border: 1px solid var(--color-input-border);
-	border-radius: convert-px2rem(var(--input-border-radius-number));
-	padding: convert-px2rem(5) convert-px2rem(36) convert-px2rem(5)
-		convert-px2rem(16);
+	border-radius: convert.to-rem(var(--input-border-radius-number));
+	padding: convert.to-rem(5) convert.to-rem(36) convert.to-rem(5)
+		convert.to-rem(16);
 	transition: border-color var(--transition-duration);
 
 	&:focus-visible {
@@ -38,7 +27,7 @@
 	}
 
 	&.password {
-		padding-right: convert-px2rem(58);
+		padding-right: convert.to-rem(58);
 	}
 
 	&:disabled {
@@ -51,7 +40,7 @@
 	&:-webkit-autofill:hover,
 	&:-webkit-autofill:focus,
 	&:-webkit-autofill:active {
-		-webkit-box-shadow: 0 0 0 convert-px2rem(var(--input-height-number))
+		-webkit-box-shadow: 0 0 0 convert.to-rem(var(--input-height-number))
 			var(--bg-input-autofill) inset !important;
 		-webkit-text-fill-color: var(--fg-input-autofill);
 	}
