--- a/source-code/frontend/src/shared/ui/fields/radio-button/ui/RadioButton.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/radio-button/ui/RadioButton.module.scss
@@ -1,24 +1,23 @@
-@import "@/styles/functions/convert-px2rem";
+@use "@/styles/functions/_convert";
 @import "@/styles/mixins/typography";
-@import "@/styles/mixins/breakpoints";
 @import "@/styles/mixins/mixins";
 
 .block {
 	display: flex;
 	flex-direction: column;
-	gap: convert-px2rem(4);
+	gap: convert.to-rem(4);
 
 	&.horizontal {
 		flex-direction: row;
 		flex-wrap: wrap;
-		gap: convert-px2rem(10);
+		gap: convert.to-rem(10);
 	}
 }
 
 .label {
 	position: relative;
 	display: flex;
-	gap: convert-px2rem(10);
+	gap: convert.to-rem(10);
 	text-align: left;
 	cursor: pointer;
 	width: fit-content;
@@ -39,8 +38,8 @@
 	appearance: none;
 	background: var(--bg-radio);
 	border: 1px solid var(--color-radio-border);
-	height: convert-px2rem(20);
-	width: convert-px2rem(20);
+	height: convert.to-rem(20);
+	width: convert.to-rem(20);
 	border-radius: 50%;
 	vertical-align: text-bottom;
 	position: relative;
@@ -80,7 +79,7 @@
 		border-radius: 0;
 		background-color: var(--color-radio-point);
 		border-radius: 50%;
-		margin: convert-px2rem(3) convert-px2rem(3);
+		margin: convert.to-rem(3) convert.to-rem(3);
 	}
 }
 
