--- a/source-code/frontend/src/shared/ui/fields/textarea/ui/Textarea.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/textarea/ui/Textarea.module.scss
@@ -1,23 +1,13 @@
-@import "@/styles/functions/convert-px2rem";
-@import "@/styles/mixins/typography";
-@import "@/styles/mixins/breakpoints";
+@use "@/styles/functions/_convert";
 @import "@/styles/mixins/mixins";
-
-.block {
-	@include md {
-	}
-
-	@include lg {
-	}
-}
 
 .wrap {
 	display: block;
 	position: relative;
 	overflow: hidden;
-	border-radius: convert-px2rem(var(--input-border-radius-number));
+	border-radius: convert.to-rem(var(--input-border-radius-number));
 	border: 1px solid var(--color-input-border);
-	padding: convert-px2rem(14) convert-px2rem(4) convert-px2rem(14) 0;
+	padding: convert.to-rem(14) convert.to-rem(4) convert.to-rem(14) 0;
 	transition: border-color var(--transition-duration);
 
 	&:has(.input:focus-visible) {
@@ -37,12 +27,12 @@
 .input {
 	display: block;
 	width: 100%;
-	font-size: convert-px2rem(16);
-	padding-right: convert-px2rem(32);
-	padding-left: convert-px2rem(16);
+	font-size: convert.to-rem(16);
+	padding-right: convert.to-rem(32);
+	padding-left: convert.to-rem(16);
 	resize: vertical;
-	min-height: convert-px2rem(150);
-	max-height: convert-px2rem(400);
+	min-height: convert.to-rem(150);
+	max-height: convert.to-rem(400);
 	border: none;
 	outline: none;
 	@include scrollbar;
