--- a/source-code/frontend/src/shared/ui/form/form-wrapper/ui/FormWrapper.module.scss
+++ b/source-code/frontend/src/shared/ui/form/form-wrapper/ui/FormWrapper.module.scss
@@ -1,37 +1,32 @@
-@import "@/styles/functions/convert-px2rem";
-@import "@/styles/mixins/typography";
+@use "@/styles/functions/_convert";
 @import "@/styles/mixins/breakpoints";
-@import "@/styles/mixins/mixins";
 
 .block {
-	max-width: convert-px2rem(360);
+	max-width: convert.to-rem(360);
 	margin: 0 auto;
 
 	@include md {
 		max-width: unset;
 	}
-
-	@include lg {
-	}
 }
 
 .title {
-	margin-bottom: convert-px2rem(20);
+	margin-bottom: convert.to-rem(20);
 	text-align: center;
 }
 
 .fields {
 	display: flex;
 	flex-direction: column;
-	gap: convert-px2rem(20);
+	gap: convert.to-rem(20);
 }
 
 .button {
 	width: 100% !important;
-	margin-top: convert-px2rem(24);
+	margin-top: convert.to-rem(24);
 }
 
 .content {
-	max-width: convert-px2rem(360);
+	max-width: convert.to-rem(360);
 	margin: 0 auto;
 }
