--- a/source-code/frontend/src/shared/ui/buttons/burger/ui/BurgerButton.module.scss
+++ b/source-code/frontend/src/shared/ui/buttons/burger/ui/BurgerButton.module.scss
@@ -1,10 +1,10 @@
 @use "@/styles/functions/convert";
-@import "@/styles/mixins/mixins";
+@use "@/styles/mixins/mixins";
 
 .button {
 	width: convert.to-rem(24);
 	height: convert.to-rem(24);
-	@include flex-center();
+	@include mixins.flex-center();
 
-	@include hover-opacity;
+	@include mixins.hover-opacity;
 }
