--- a/source-code/frontend/src/shared/ui/buttons/root/ui/RootButton.module.scss
+++ b/source-code/frontend/src/shared/ui/buttons/root/ui/RootButton.module.scss
@@ -1,5 +1,5 @@
 @use "@/styles/functions/convert";
-@import "@/styles/mixins/mixins";
+@use "@/styles/mixins/mixins";
 
 .button {
 	transition:
@@ -12,7 +12,7 @@
 	flex-shrink: 0;
 	line-height: 1;
 	border-radius: convert.to-rem(10);
-	@include flex-center;
+	@include mixins.flex-center;
 	flex-direction: row;
 	gap: convert.to-rem(10);
 	position: relative;
@@ -39,13 +39,13 @@
 		color: var(--fg-button-1);
 		border: 1px solid var(--bg-button-1);
 
-		@include hover-wrapper {
+		@include mixins.hover-wrapper {
 			background-color: var(--bg-button-1-hover);
 			color: var(--fg-button-1-hover);
 			border-color: var(--bg-button-1-hover);
 		}
 
-		@include active-wrapper {
+		@include mixins.active-wrapper {
 			background-color: var(--bg-button-1-active);
 			color: var(--fg-button-1-active);
 			border-color: var(--bg-button-1-active);
@@ -57,13 +57,13 @@
 		color: var(--fg-button-2);
 		border: 1px solid var(--fg-button-2);
 
-		@include hover-wrapper {
+		@include mixins.hover-wrapper {
 			background-color: var(--bg-button-2-hover);
 			color: var(--fg-button-2-hover);
 			border-color: var(--bg-button-2-hover);
 		}
 
-		@include active-wrapper {
+		@include mixins.active-wrapper {
 			background-color: var(--bg-button-2-active);
 			color: var(--fg-button-2-active);
 			border-color: var(--bg-button-2-active);
@@ -73,12 +73,12 @@
 		background-color: var(--bg-button-3);
 		color: var(--fg-button-3);
 
-		@include hover-wrapper {
+		@include mixins.hover-wrapper {
 			background-color: var(--bg-button-3-hover);
 			color: var(--fg-button-3-hover);
 		}
 
-		@include active-wrapper {
+		@include mixins.active-wrapper {
 			background-color: var(--bg-button-3-active);
 			color: var(--fg-button-3-active);
 		}
