#refactor - use breackpoints

--- a/source-code/frontend/src/shared/layouts/content-layout/ui/ContentLayout.module.scss
+++ b/source-code/frontend/src/shared/layouts/content-layout/ui/ContentLayout.module.scss
@@ -1,5 +1,5 @@
 @use "@/styles/functions/convert";
-@import "@/styles/mixins/breakpoints";
+@use "@/styles/mixins/breakpoints";
 
 .block {
 	max-width: convert.to-rem(1440);
@@ -7,7 +7,7 @@
 	width: 100%;
 	margin: 0 auto;
 	position: relative;
-	@include lg {
+	@include breakpoints.lg {
 		padding: 0 convert.to-rem(30);
 	}
 }
