--- a/source-code/frontend/src/shared/ui/form/form-wrapper/ui/FormWrapper.module.scss
+++ b/source-code/frontend/src/shared/ui/form/form-wrapper/ui/FormWrapper.module.scss
@@ -1,11 +1,11 @@
 @use "@/styles/functions/convert";
-@import "@/styles/mixins/breakpoints";
+@use "@/styles/mixins/breakpoints";
 
 .block {
 	max-width: convert.to-rem(360);
 	margin: 0 auto;
 
-	@include md {
+	@include breakpoints.md {
 		max-width: unset;
 	}
 }
