--- a/source-code/frontend/src/features/modal/ui/Modal.module.scss
+++ b/source-code/frontend/src/features/modal/ui/Modal.module.scss
@@ -1,6 +1,6 @@
 @use "@/styles/functions/convert";
+@use "@/styles/mixins/breakpoints";
 @import "@/styles/mixins/typography";
-@import "@/styles/mixins/breakpoints";
 
 .wrap {
 	background-color: var(--background);
@@ -8,7 +8,7 @@
 	max-width: convert.to-rem(600);
 	border-radius: convert.to-rem(10);
 	max-height: 96%;
-	@include md {
+	@include breakpoints.md {
 		width: 100%;
 	}
 }
