--- a/source-code/frontend/src/shared/ui/overlay/ui/Overlay.module.scss
+++ b/source-code/frontend/src/shared/ui/overlay/ui/Overlay.module.scss
@@ -14,6 +14,7 @@
 		opacity var(--transition-duration),
 		visibility var(--transition-duration);
 	@include mixins.flex-center;
+	@include mixins.backdrop;
 
 	&.open {
 		visibility: visible;
