--- a/source-code/frontend/src/widgets/header/ui/navbar/HeaderNavbar.module.scss
+++ b/source-code/frontend/src/widgets/header/ui/navbar/HeaderNavbar.module.scss
@@ -1,10 +1,10 @@
 @use "@/styles/functions/convert";
-@import "@/styles/mixins/breakpoints";
+@use "@/styles/mixins/breakpoints";
 
 .block {
 	display: none;
 
-	@include lg {
+	@include breakpoints.lg {
 		display: flex;
 		align-items: center;
 		gap: convert.to-rem(20);
