--- a/source-code/frontend/src/shared/ui/fields/file/ui/rules/FileInputRules.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/file/ui/rules/FileInputRules.module.scss
@@ -1,5 +1,5 @@
-@import "@/styles/mixins/typography";
+@use "@/styles/mixins/typography";
 
 .rules {
-	@include small-text();
+	@include typography.small-text();
 }
