--- a/source-code/frontend/src/shared/ui/fields/radio-button/ui/RadioButton.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/radio-button/ui/RadioButton.module.scss
@@ -1,6 +1,6 @@
 @use "@/styles/functions/convert";
 @use "@/styles/mixins/mixins";
-@import "@/styles/mixins/typography";
+@use "@/styles/mixins/typography";
 
 .block {
 	display: flex;
@@ -84,5 +84,5 @@
 }
 
 .text {
-	@include additional-text;
+	@include typography.additional-text;
 }
