--- a/source-code/frontend/src/shared/ui/fields/checkbox/ui/Checkbox.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/checkbox/ui/Checkbox.module.scss
@@ -1,6 +1,7 @@
 @use "@/styles/functions/convert";
 @use "@/styles/mixins/mixins";
 @use "@/styles/mixins/typography";
+@use "@/styles/mixins/transition";
 
 .label {
 	position: relative;
@@ -33,7 +34,7 @@
 	vertical-align: text-bottom;
 	position: relative;
 	cursor: pointer;
-	transition: border-color var(--transition-duration);
+	@include transition.create(border-color);
 
 	&.error {
 		border-color: var(--color-alert) !important;
