--- a/source-code/frontend/src/shared/ui/fields/textarea/ui/Textarea.module.scss
+++ b/source-code/frontend/src/shared/ui/fields/textarea/ui/Textarea.module.scss
@@ -1,5 +1,6 @@
 @use "@/styles/functions/convert";
 @use "@/styles/mixins/scrollbar";
+@use "@/styles/mixins/transition";
 
 .wrap {
 	display: block;
@@ -8,7 +9,7 @@
 	border-radius: convert.to-rem(var(--input-border-radius-number));
 	border: 1px solid var(--color-input-border);
 	padding: convert.to-rem(14) convert.to-rem(4) convert.to-rem(14) 0;
-	transition: border-color var(--transition-duration);
+	@include transition.create(border-color);
 
 	&:has(.input:focus-visible) {
 		border-color: var(--color-input-border-focused);
