--- a/source-code/frontend/src/shared/ui/overlay/ui/Overlay.module.scss
+++ b/source-code/frontend/src/shared/ui/overlay/ui/Overlay.module.scss
@@ -1,4 +1,5 @@
 @use "@/styles/mixins/mixins";
+@use "@/styles/mixins/transition";
 
 .overlay {
 	position: fixed;
@@ -10,9 +11,7 @@
 	z-index: var(--z-index-modal);
 	visibility: hidden;
 	opacity: 0;
-	transition:
-		opacity var(--transition-duration),
-		visibility var(--transition-duration);
+	@include transition.create(opacity, visibility);
 	@include mixins.flex-center;
 	@include mixins.backdrop;
 
