--- a/source-code/frontend/src/widgets/burger/ui/Burger.module.scss
+++ b/source-code/frontend/src/widgets/burger/ui/Burger.module.scss
@@ -1,4 +1,5 @@
 @use "@/styles/functions/convert";
+@use "@/styles/mixins/transition";
 
 .block {
 	z-index: var(--z-index-burger);
@@ -9,7 +10,7 @@
 	bottom: 0;
 	background-color: var(--background);
 	transform: translateX(100%);
-	transition: transform var(--transition-duration);
+	@include transition.create(transform);
 
 	&.open {
 		transform: translateX(0);
